After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726972 - Automatically select newly created application folders
Automatically select newly created application folders
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.11.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-03-24 15:45 UTC by Arnaud B.
Modified: 2014-04-24 02:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
app folders: Select newly created folders (2.20 KB, patch)
2014-04-08 04:03 UTC, Matthias Clasen
committed Details | Review

Description Arnaud B. 2014-03-24 15:45:00 UTC
At the creation of a Shell’s folder (« + »), is should be automatically selected (« ✔ »).
Comment 1 Richard Hughes 2014-04-07 15:58:54 UTC
Thanks for taking the time to report this bug.
This bug report isn't very useful because it doesn't describe the bug well. If you have time and can still reproduce the bug, please read http://bugzilla.gnome.org/bug-HOWTO.html and add a more useful description to this bug.
Comment 2 Arnaud B. 2014-04-08 01:17:46 UTC
So. GNOME Software offers to create GNOME Shell’s “applications folders”, to let you group applications in the Grid of applications. When you have two applications you want to group that way:
* you go in the “Installed” view of applications;
* you click on the “Selection” ([✔]) button; you select your two applications; you click “Add to folder…”;
* you have a modal window that appears, with a list of existing groups, and a « + » item.
If you want to group your two applications under a new group, you hit this « + » item, have a little popup, enter the name of the new group, and validate.

For now, the new group is added to the list of groups. You have to select it (it shows it is checked with a « ✔ » mark), then to confirm you really want to add the two applications you want to group to the selected group you just created. At least the first of this two actions is unnecessary; in fact, the second one is also unuseful.

Because if you selected two applications for grouping them, and then created a new group, we could assume it is for grouping the two applications in this new group. The two popups should so be closed when the user validates the name of the new group; or, it could have to confirm he wants to add the two applications  to it, but the group newly created should be automatically selected, assuming it’s the most common case.
Comment 3 Matthias Clasen 2014-04-08 04:03:15 UTC
Created attachment 273761 [details] [review]
app folders: Select newly created folders

This is the expected behavior.
Comment 4 Richard Hughes 2014-04-08 08:30:22 UTC
Review of attachment 273761 [details] [review]:

Untested, but looks sane to me.
Comment 5 Allan Day 2014-04-11 08:24:13 UTC
I agree with the reporter. Renaming for clarity.
Comment 6 Matthias Clasen 2014-04-24 02:56:43 UTC
Attachment 273761 [details] pushed as 251ef38 - app folders: Select newly created folders