app folders: Select newly created folders

This is the expected behavior.
https://bugzilla.gnome.org/show_bug.cgi?id=726972